--- a/.github/ISSUE_TEMPLATE/new_package.yml
+++ b/.github/ISSUE_TEMPLATE/new_package.yml
@@ -33,7 +33,7 @@ body:
       value: 
     validations:
       required: true
-  - type: dropdown
+  - type: checkboxes
     id: purpose
     attributes:
       label: Package purpose
