--- a/.github/ISSUE_TEMPLATE/new_package.yml
+++ b/.github/ISSUE_TEMPLATE/new_package.yml
@@ -27,7 +27,7 @@ body:
       label: What version of the package have you validated?
     validations:
       required: true
-  - type: checkboxes
+  - type: dropdown
     id: purpose
     attributes:
       label: Package purpose
