--- a/.github/ISSUE_TEMPLATE/new_package.yml
+++ b/.github/ISSUE_TEMPLATE/new_package.yml
@@ -27,3 +27,13 @@ body:
       label: What version of the package have you validated?
     validations:
       required: true
+  - type: dropdown
+    id: purpose
+    attributes:
+      label: Package purpose
+      options:
+        - Statistical
+        - Non-statistical
+      default: 0
+    validations:
+      required: true
