--- a/.github/ISSUE_TEMPLATE/new_package.yml
+++ b/.github/ISSUE_TEMPLATE/new_package.yml
@@ -37,3 +37,11 @@ body:
       default: 0
     validations:
       required: true
+  - type: checkboxes
+    id: pkg_author
+    attributes:
+      label: Package authors is/are 
+      options:
+        - well known in the statistical, data-science and R communities
+        - have "trusted" status
+        - SCTO member
