--- a/.github/ISSUE_TEMPLATE/new_package.yml
+++ b/.github/ISSUE_TEMPLATE/new_package.yml
@@ -19,7 +19,7 @@ body:
     id: package
     attributes:
       label: | 
-        What package have you validated?
+        What package have you validated? \n\n
         <!-- TAGSTART:package -->
     validations:
       required: true
