--- a/.github/ISSUE_TEMPLATE/new_package.yml
+++ b/.github/ISSUE_TEMPLATE/new_package.yml
@@ -120,7 +120,7 @@ body:
     id: downloads
     attributes: 
       label: Number of downloads in the last 12 months
-      description: Using the cranlogs package (TODO: add example code, function in the R package)
+      description: "Using the cranlogs package (TODO: add example code, function in the R package)"
     validations:
       required: true
   - type: dropdown
