--- a/.github/ISSUE_TEMPLATE/new_package.yml
+++ b/.github/ISSUE_TEMPLATE/new_package.yml
@@ -20,7 +20,7 @@ body:
     attributes:
       label: What package have you validated?
       description:  <!-- TAGSTART:package -->
-      placeholder: enter package name here
+      placeholder: e.g. ggplot2
     validations:
       required: true
   - type: markdown
@@ -31,19 +31,22 @@ body:
     id: version
     attributes:
       label: What version of the package have you validated?
+      placeholder: e.g. 1.12.3
     validations:
       required: true
   - type: input
     id: release_date
     attributes:
       label: When was this package version released?
-      description: if available
+      description: If available. Please use ODBC format - YYYY-MM-DD
+      placeholder: YYYY-MM-DD
     validations:
       required: false
   - type: input
     id: package_author
     attributes:
       label: Who authored the package
+      placeholder: e.g. Package Author
     validations:
       required: true
   - type: dropdown
@@ -71,6 +74,7 @@ body:
     id: nr_dependencies
     attributes: 
       label: Number of dependencies
+      placeholder: e.g. 15
     validations:
       required: true
   - type: dropdown
