--- a/.github/ISSUE_TEMPLATE/new_test.yml
+++ b/.github/ISSUE_TEMPLATE/new_test.yml
@@ -20,14 +20,14 @@ body:
   - type: input
     id: package
     attributes:
-      label: Name of the package you have validated
+      label: Name of the package you have tested
       placeholder: e.g. ggplot2
     validations:
       required: true
   - type: input
     id: version
     attributes:
-      label: What version of the package have you validated?
+      label: What version of the package have you tested?
       placeholder: e.g. 1.12.3
     validations:
       required: true
