--- a/.github/ISSUE_TEMPLATE/new_package.yml
+++ b/.github/ISSUE_TEMPLATE/new_package.yml
@@ -111,8 +111,8 @@ body:
     attributes:
       label: is source code available, accessible and documented (i.e., well-structured and including comments) or is the source code unavailable or not clearly commented.
       options:
-        - Yes
-        - No
+        - "Yes"
+        - "No"
       description: |
           - explanatory comments in the code are a good sign
           - roxygen comments for internal functions is a good sign
@@ -132,8 +132,8 @@ body:
     attributes: 
       label: Bug reporting address is available (in DESCRIPTION)
       options:
-        - Yes
-        - No
+        - "Yes"
+        - "No"
     validations:
       required: true
   - type: dropdown
@@ -141,8 +141,8 @@ body:
     attributes: 
       label: Does the package have one or more vignettes?
       options:
-        - Yes
-        - No
+        - "Yes"
+        - "No"
     validations:
       required: true
   - type: dropdown
