--- a/.github/ISSUE_TEMPLATE/new_package.yml
+++ b/.github/ISSUE_TEMPLATE/new_package.yml
@@ -27,6 +27,7 @@ body:
         - Not SCTO
     validations:
       required: false
+      default: 1
   - type: input
     id: package
     attributes:
