--- a/.github/workflows/calculate_risk.yaml
+++ b/.github/workflows/calculate_risk.yaml
@@ -9,7 +9,7 @@ jobs:
     name: Render my document
     runs-on: macOS-latest
     env:
-      GITHUB_EVENT_PATH: ${{ GITHUB_EVENT_PATH }}
+      GITHUB_EVENT_PATH: ${{ github.event }}
     steps:
       - uses: actions/checkout@v2
       - uses: r-lib/actions/setup-r@v2
