--- a/.github/workflows/calculate_risk.yaml
+++ b/.github/workflows/calculate_risk.yaml
@@ -7,5 +7,6 @@ name: Calculate risk
 jobs:
   render:
     name: Environment Printer
-    uses: managedkaos/print-env@v1.0
+    steps:
+      - uses: managedkaos/print-env@v1.0
     
