--- a/.github/workflows/calculate_risk.yaml
+++ b/.github/workflows/calculate_risk.yaml
@@ -7,7 +7,7 @@ name: Calculate risk
 jobs:
   render:
     name: Environment Printer
-    runs-on: macOS-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: managedkaos/print-env@v1.0
     
