--- a/.github/workflows/calculate_risk.yaml
+++ b/.github/workflows/calculate_risk.yaml
@@ -10,4 +10,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: managedkaos/print-env@v1.0
+      - uses: r-lib/actions/setup-r@v2
+      - name: Install remotes
+        run: Rscript -e 'install.packages(c("remotes", "jsonlite"))'
+      - name: Install validation
+        run: Rscript -e 'remotes::install_github("SwissClinicalTrialOrganisation/validation")'
+      - name: Run script to calculate risk and post comment
+        run: Rscript -e 'jsonlite::read_json("github/workflow/event.json")'
     
