--- a/.github/workflows/calculate_risk.yaml
+++ b/.github/workflows/calculate_risk.yaml
@@ -12,9 +12,9 @@ jobs:
       - uses: managedkaos/print-env@v1.0
       - uses: r-lib/actions/setup-r@v2
       - name: Install remotes
-        run: Rscript -e 'install.packages(c("remotes", "jsonlite"))'
+        run: Rscript -e 'install.packages(c("jsonlite"))'
       - name: Install validation
-        run: Rscript -e 'remotes::install_github("SwissClinicalTrialOrganisation/validation")'
+        run: Rscript -e 'install.packages("validation", repos = "https://ctu-bern.r-universe.dev")'
       - name: Run script to calculate risk and post comment
         run: Rscript -e 'jsonlite::read_json("github/workflow/event.json")'
     
