--- a/.github/workflows/calculate_risk.yaml
+++ b/.github/workflows/calculate_risk.yaml
@@ -12,7 +12,7 @@ jobs:
       - uses: managedkaos/print-env@v1.0
       - uses: r-lib/actions/setup-r@v2
       - name: Install remotes
-        run: Rscript -e 'install.packages(c("jsonlite"))'
+        run: Rscript -e 'install.packages(c("jsonlite", "cranlogs", "crayon", "dplyr", "glue", "lubridate", "sessioninfo", "testthat", "rmarkdown", "knitr", "kableExtra", "magrittr", "devtools"))'
       - name: Install validation
         run: Rscript -e 'install.packages("validation", repos = "https://ctu-bern.r-universe.dev", dependencies = TRUE)'
       - name: Run script to calculate risk and post comment
