--- a/.github/workflows/calculate_risk.yaml
+++ b/.github/workflows/calculate_risk.yaml
@@ -7,11 +7,11 @@ name: Calculate risk
 jobs:
   render:
     name: Environment Printer
-    runs-on: ubuntu-latest
+    runs-on: macOS-latest
     env: 
       NUMBER: ${{ github.event.issue.number }}
     steps:
-      - uses: managedkaos/print-env@v1.0
+      # - uses: managedkaos/print-env@v1.0
       - uses: r-lib/actions/setup-r@v2
       - name: Install dependencies
         run: Rscript -e 'install.packages(c("jsonlite", "cranlogs", "crayon", "dplyr", "glue", "lubridate", "sessioninfo", "testthat", "rmarkdown", "knitr", "kableExtra", "magrittr", "devtools"))'
