--- a/.github/workflows/calculate_risk.yaml
+++ b/.github/workflows/calculate_risk.yaml
@@ -12,6 +12,7 @@ jobs:
       NUMBER: ${{ github.event.issue.number }}
     steps:
       # - uses: managedkaos/print-env@v1.0
+      - uses: actions/checkout@v4
       - uses: r-lib/actions/setup-r@v2
       - name: Install dependencies
         run: Rscript -e 'install.packages(c("jsonlite", "cranlogs", "crayon", "dplyr", "glue", "lubridate", "sessioninfo", "testthat", "rmarkdown", "knitr", "kableExtra", "magrittr", "devtools"))'
