--- a/.github/workflows/calculate_risk.yaml
+++ b/.github/workflows/calculate_risk.yaml
@@ -30,5 +30,5 @@ jobs:
           git config --global user.name "Render action"
           git add tables/validated_packages.csv
           git commit -m "add new packages" || echo "No changes to commit"
-          git push origin master || echo "No changes to commit"
+          git push origin main || echo "No changes to commit"
     
